[Smart Lock] Stop showing auto signin first run only after user decision received.

BUG=609135

Review-Url: https://codereview.chromium.org/1952723002
Cr-Commit-Position: refs/heads/master@{#391670}

Former-commit-id: 8c60b4a72614ac2a44e45c8d4f3c5eb60553a8ef